[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calculator"
version = "1.0.0"
description = "A simple calculator module"
dependencies = []

[project.optional-dependencies]
docs = ["pdoc"]

[dependency-groups]
dev = [
    "pdoc>=15.0.4",
]
